fixed spacing and demo user error

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -12,8 +12,8 @@
   margin-top: 10px;
   position: absolute;
   /* min-width: 65px; */
-  width: 125px;
-  margin-left: -75px;
+  width: 150px;
+  margin-left: -100px;
 }
 
 #li-link,
